website/css/styles.css
html, body {
  max-width: 100vw; /* assure que la largeur du body ne dépasse pas la largeur de la fenêtre */
  margin : 0;
}
/*body, html {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
}*/
.container {
  display: flex;
  overflow-x: auto;
  height: 100%;
  scroll-snap-type: x mandatory;
}
.slide {
  flex: 0 0 100%;
  scroll-snap-align: start;
  height: 100vh;
  text-align: center;
}

/* Vertical scrolling
.box {
  height: calc(9vw + 9vh);
  overflow: hidden;
  position: relative;
}
.box::before {
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  content: '';
  height: 5px;
  position: absolute;
  background: linear-gradient(180deg, #0000, rgba(0, 0, 0, 0));
}
.box::after {
  left: 0;
  bottom: 0;
  z-index: 1;
  width: 100%;
  content: '';
  height: 5px;
  position: absolute;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0), #0000);
}
ul {
  float: inline-start;
  text-align: center;
  margin: 0;
  padding: 0;
  -webkit-animation: scrollUp 8s ease-in-out infinite normal;
          animation: scrollUp 8s ease-in-out infinite normal;
}
@-webkit-keyframes scrollUp {
  from {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
  to {
    -webkit-transform: translateY(-84%); /* percentage calculation : 100 - (100/ # of items in the list)
            transform: translateY(-84%);
  }
}
@keyframes scrollUp {
  from {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
  to {
    -webkit-transform: translateY(-84%);
            transform: translateY(-84%);
  }
}  */

#Intro {
  margin-right: 120px;
  margin-left: 120px;
}

.fullscreen-text {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 200px;
  font-size: 3em;
  text-align: justify;
}

body {
    font-family: Arial, sans-serif;
    background-color: white;
    color: black;
}

#united-viz, #undesa-viz, #sankey-viz {
  max-width: 45vw;
  max-height: 45vh;
  margin:auto;
}

.right {
    margin-right: 120px;
}

.top {
    padding-top: 50px;
}

h1 { 
    text-align: center;
    margin-top: 0;
    font-size: calc(8vw + 8vh);
    font-family: Times New Roman;
  }

#Title h1{
    text-shadow: 2px 2px 4px white; /* x-offset, y-offset, blur-radius, color */
}

#Intro p{
  text-align: justify;
  font-size: calc(1vw + 1vh);
}

h2 {
    padding-top: calc(1vw + 1vh);
    text-align: center;
    font-size: calc(4vw + 4vh);
    font-family: Times New Roman;
}

#Credits h2,
#United h2,
#Authors h2 {
  margin-bottom: 0px;
}


h3 {
    text-align: center;
    font-size: calc(1.5vw + 1.5vh);
}

p {
    text-align: justify;
    font-size: calc(1vw + 1vh);
}


.mendatory-scrolling{
    overflow-y: scroll; /* Permet le défilement vertical */
    scroll-snap-type: y mandatory; /* Active le scroll snapping vertical obligatoire */
    height: 100vh;
}

#fixedMenu {
    position: fixed;
    top: 50%;
    right: 10px;
    /*transform: translateY(-50%);*/
    z-index: 10;
  }
  
  #fixedMenu a {
    display: block;
    padding: 5px 10px;
    margin: 5px 0px;
    text-align: center;
    color: white;
    background-color: #c7522a;
    border-radius: 5px;
    text-decoration: none;
  }
  
  #fixedMenu a:hover {
    background-color: #008585;
  }

  /* Style pour le lien actif */
  #fixedMenu a.active {
    padding: 5px 5px;
    background-color: #008585;
    color: white;
    font-weight: bold;
  }


 #Title{
  /*
  background-image: url('../images/hero_background.webp');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  */
  position:relative;
}
  
/* --------------------------------------------------------------*/
/* ---------------------   2 COLUMNS     ------------------------*/
/* --------------------------------------------------------------*/

.two-columns {
  display: flex;
  flex-direction: row;
  align-items: flex-start; /* Align items at the top */
}

.text-column {
  flex: 1; /* Takes up 1 part of the available space */
  padding-right: 50px; /* Optional padding for spacing */
  padding-left: 50px;
  text-align: left;
}

.viz-column {
  flex: 2; /* Takes up 2 parts of the available space */
  /* No padding-right here if you want the viz to be full width */
}

.centered-content {
  height: calc(100vh - 2*(5vw + 5vh));
  display: flex;
  justify-content: center;
  align-items: center;
}

  
/* --------------------------------------------------------------*/
/* ----------------   AUTHORS SECTION    ------------------------*/
/* --------------------------------------------------------------*/

.author-profiles {
  display: flex;
  justify-content: center;
}

.author {
  margin: 0 10px;
  text-align: center;
}

.author p {
  margin: 4px 0;
}

.profile-photo {
  width: 300px; 
  height: 300px;
  border-radius: 50%;
  object-fit: cover;
  background-color: #008585;
}

.github-link {
  font-size: 32px;
  color: #008585; 
  display: inline-block;
  margin: 4px 0;
}

.github-link:hover {
  color: black;
}

.linkedin-link {
  font-size: 32px;
  color: #008585; 
  display: inline-block;
  margin: 4px 0;
}

.linkedin-link:hover {
  color: #2867B2;
}

.info-panel {
  /*position: absolute;*/
 /* Adjust as needed */
  left: 0px;
  width: 300px; /* Fixed width */
  height: 445px;/* Maximum height */
  overflow-y: hidden; /* Enable vertical scrollbar if content exceeds maximum height */
  background-color: rgba(251, 242, 196, 0.4);
  border: 2px solid rgba(229, 193, 133, 0.6);
  padding: 10px;
}

/* Style for the heading */
.info-panel h2 {
  font-size: 18px; /* Adjust the font size as needed */
}

/* Style for the paragraph */
.info-panel p {
  font-size: 14px;
  text-align: left;  /* Adjust the font size as needed */
}

/* --------------------------------------------------------------*/
/* --------------------------------------------------------------*/
/* --------------------------------------------------------------*/

